--- a/app/src/assets/104.html
+++ b/app/src/assets/104.html
@@ -1,17 +1,17 @@
 <html>
-    <head>
-        <script type="text/javascript">
+<head>
+    <script type="text/javascript">
             function changeColor (color) {
                 document.body.style.backgroundColor = color;
             }
-        </script>
-    </head>
-    <body>
-    	<a onclick="baobao.callAndroidMethod(100,100,'ccc',true)">
-    		CallAndroidMethod</a>
-    	<a onclick="baobao.gotoAnyWhere('com.example.youngheart.MovieDetailActivity,iOS.MovieDetailViewController:movieId=(int)123')">
-    		gotoAnyWhere</a>
-    		
-    		
-    </body>
+
+    </script>
+</head>
+<body>
+<a onclick="baobao.callAndroidMethod(100,100,'ccc',true)">
+    CallAndroidMethod</a>
+<a onclick="baobao.gotoAnyWhere('com.willkernel.app.practice1.activity.MovieDetailActivity,ios.MovieDetailViewController:movieId=(int)123')">gotoAnyWhere</a>
+
+
+</body>
 </html>
