--- a/app/src/main/assets/101.html
+++ b/app/src/main/assets/101.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 <a onclick="baobao.callOnAndroidMethod(100,200,'ddd',true)">CallOnAndroidMethod</a>
-<a onclick="baobao.gotoAnyWhere('gotoNewsList:cityId=(int)12:cityName=北京')">gotoAnyWhere</a>
+<a onclick="baobao.gotoAnyWhere('gotoNewsList:cityId=(int)12&cityName=北京')">gotoAnyWhere</a>
 </body>
 </html>
