--- a/app/src/main/assets/103.html
+++ b/app/src/main/assets/103.html
@@ -9,7 +9,7 @@
     <body>
     	<a onclick="baobao.callAndroidMethod(100,100,'ccc',true)">
     		CallAndroidMethod</a>
-    	<a onclick="baobao.gotoAnyWhere('gotoMovieDetail:movieId=123')">
+    	<a onclick="baobao.gotoAnyWhere('gotoMovieDetail:movieId=(int)123&movieName=WTF')">
     		gotoAnyWhere</a>
     </body>
 </html>
